Styling of index.html is 80% complete

--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог Техномарта</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -14,18 +14,18 @@
           <div class="header-top-left">
             <a href="index.html" class="logo header-logo"><img src="img/logo-top.png" width="220" height="47" alt="Логотип Техномарта"></a>
             <form class="search-form">
-              <input type="search" class="search-field" name="search" value="Поиск">
+              <input type="text" class="search-field" name="search" value="Поиск:">
             </form>
           </div>
           <div class="header-top-right">
-            <a href="#">Закладки: 0</a>
+            <a href="#" class="bookmarks">Закладки: 0</a>
             <a href="#" class="cart full-cart">Корзина: 10</a>
             <a href="#" class="button order-button">Оформить заказ</a>
           </div>
         </div>
       </div>
       <div class="main-header-middle container">
-        <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
         <p class="main-header-contacts">
           <span class="phone-number">+7 (812) 555-05-55</span>
           <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
@@ -40,13 +40,13 @@
         </div>
       <nav class="main-navigation container">
         <ul class="site-navigation list-marker-switch">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li class="site-navigation-item"><a href="index.html">Главная</a></li>
+          <li class="site-navigation-item"><a href="#">Компания</a></li>
+          <li class="site-navigation-item"><a href="catalog.html">Каталог</a></li>
+          <li class="site-navigation-item"><a href="#">Новости</a></li>
+          <li class="site-navigation-item"><a href="#">Спецпредложения</a></li>
+          <li class="site-navigation-item"><a href="#">Доставка</a></li>
+          <li class="site-navigation-item"><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>    
