--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -14,18 +14,18 @@
           <div class="header-top-left">
             <a href="#" class="logo header-logo"><img src="img/logo-top.png" width="220" height="47" alt="Логотип Техномарта"></a>
             <form class="search-form">
-              <input type="search" class="search-field" name="search" value="Поиск">
+              <input type="text" class="search-field" name="search" value="Поиск:">
             </form>
           </div>
           <div class="header-top-right">
-            <a href="#">Закладки: 0</a>
+            <a href="#" class="bookmarks">Закладки: 0</a>
             <a href="#" class="cart">Корзина: 0</a>
             <a href="#" class="button order-button">Оформить заказ</a>
           </div>
         </div>
       </div>
       <div class="main-header-middle container">
-        <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
         <p class="main-header-contacts">
           <span class="phone-number">+7 (812) 555-05-55</span>
           <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
@@ -37,19 +37,19 @@
       </div>
       <nav class="main-navigation container">
         <ul class="site-navigation list-marker-switch">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li class="site-navigation-item"><a href="#">Главная</a></li>
+          <li class="site-navigation-item"><a href="#">Компания</a></li>
+          <li class="site-navigation-item"><a href="catalog.html">Каталог</a></li>
+          <li class="site-navigation-item"><a href="#">Новости</a></li>
+          <li class="site-navigation-item"><a href="#">Спецпредложения</a></li>
+          <li class="site-navigation-item"><a href="#">Доставка</a></li>
+          <li class="site-navigation-item"><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section class="offers container">
-        <div class="offers-item materials-item">
+        <div class="offers-item materials-item new-tag">
           <h3>Материалы</h3>
           <a href="#" class="button offers-item-button">На любой вкус</a>
         </div>
@@ -62,6 +62,13 @@
           <a href="#" class="button offers-item-button">Для стройки</a>
         </div>
         <div class="offers-item offers-item-slider">
+          <input class="visually-hidden" type="radio" id="puncher-slide" name="offers-item-slider-toggle">  
+          <input class="visually-hidden" type="radio" id="drill-slide" name="offers-item-slider-toggle" checked>
+          <div class="offers-item-slider-toggles">
+            <label for="puncher-slide" tabindex="0"></label>
+            <label for="drill-slide" tabindex="0"></label>
+          </div>
+          <span class="slider-arrow slider-arrow-left" tabindex="0"></span>
           <div class="slider-item slider-item-drill">
             <h3>Дрели</h3>
             <span>Соседям на радость!</span>
@@ -72,6 +79,7 @@
             <span>Настоящие мужские игрушки</span>
             <a href="catalog.html" class="button slider-item-button">Открыть каталог</a>
           </div>
+          <span class="slider-arrow slider-arrow-right" tabindex="0"></span>
         </div>
         <div>
           <div class="offers-item sales-item">
@@ -90,36 +98,44 @@
           <a href="#" class="button popular-products-button">Все популярные товары</a>
         </header>
         <ul class="catalog-list list-marker-switch">
-          <li class="catalog-list-item">
+          <li class="catalog-list-item" tabindex="0">
             <img src="img/bfg-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             <h3>Перфоратор BOSCH BFG 9000</h3>
             <span class="last-price">32500 Р.</span>
             <span class="current-price">25500 Р.</span>
-            <button class="button buy-item-button" type="button">Купить</button>
-            <button class="button bookmark-item-button" type="button">В закладки</button>
+            <div class="catalog-item-buttons">
+              <button class="button buy-item-button" type="button">Купить</button>
+              <button class="button bookmark-item-button" type="button">В закладки</button>
+            </div>
           </li>
-          <li class="catalog-list-item">
+          <li class="catalog-list-item" tabindex="0">
             <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
             <h3>Перфоратор BOSCH BFG 3000</h3>
             <span class="last-price">22500 Р.</span>
             <span class="current-price">15500 Р.</span>
-            <button class="button buy-item-button" type="button">Купить</button>
-            <button class="button bookmark-item-button" type="button">В закладки</button>
+            <div class="catalog-item-buttons">
+              <button class="button buy-item-button" type="button">Купить</button>
+              <button class="button bookmark-item-button" type="button">В закладки</button>
+            </div>
           </li>
-          <li class="catalog-list-item">
+          <li class="catalog-list-item" tabindex="0">
             <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <span class="last-price">30500 Р.</span>
             <span class="current-price">25500 Р.</span>
-            <button class="button buy-item-button" type="button">Купить</button>
-            <button class="button bookmark-item-button" type="button">В закладки</button>
+            <div class="catalog-item-buttons">
+              <button class="button buy-item-button" type="button">Купить</button>
+              <button class="button bookmark-item-button" type="button">В закладки</button>
+            </div>
           </li>
-          <li class="catalog-list-item">
+          <li class="catalog-list-item new-tag" tabindex="0">
             <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="current-price">12500 Р.</span>
-            <button class="button buy-item-button" type="button">Купить</button>
-            <button class="button bookmark-item-button" type="button">В закладки</button>
+            <div class="catalog-item-buttons">
+              <button class="button buy-item-button" type="button">Купить</button>
+              <button class="button bookmark-item-button" type="button">В закладки</button>
+            </div>
           </li>
         </ul>
       </section>
@@ -183,24 +199,27 @@
             <input class="visually-hidden" type="radio" id="guarantee" name="toggle">
             <input class="visually-hidden" type="radio" id="credit" name="toggle">  
             <div class="service-slider">
-              <label for="delivery">Доставка</label>
+              <label for="delivery" tabindex="0">Доставка</label>
               <label for="guarantee" tabindex="0">Гарантия</label>
               <label for="credit" tabindex="0">Кредит</label>
             </div>
             <ul class="service-list list-marker-switch">
               <li class="service-item service-item-delivery">
                 <h3>Доставка</h3>
-                <p class="basic-text">Мы с удовольствием доставим ваш товар прямо
-                  к вашему подъезду совершенно бесплатно!
-                  Ведь мы неплохо заработаем,
-                  поднимая его на ваш этаж!</p>
+                <p class="basic-text">
+                  <span>Мы с удовольствием доставим ваш товар прямо
+                    к вашему подъезду совершенно бесплатно!</span>
+                  <span>Ведь мы неплохо заработаем,
+                      поднимая его на ваш этаж!</span>
+                  </p>
               </li>
               <li class="service-item service-item-guarantee">
                 <h3>Гарантия</h3>
-                <p class="basic-text">Если купленный у нас товар поломается или заискрит,
-                  а также в случае пожара, спровоцированного его возгаранием,
+                <p class="basic-text">
+                  <span>Если купленный у нас товар поломается или заискрит,</span>
+                  <span>а также в случае пожара, спровоцированного его возгаранием,
                   вы всегда можете быть уверены в нашей гарантии. Мы обменяем
-                  сгоревший товар на новый.
+                  сгоревший товар на новый.</span>
                   Дом уж восстановите как-нибудь сами.</p>
               </li>
               <li class="service-item service-item-credit">
