--- a/catalog.html
+++ b/catalog.html
@@ -105,69 +105,87 @@
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <span class="last-price">22500 Р.</span>
               <span class="current-price">15500 Р.</span>
-              <button class="button buy-item-button" type="button">Купить</button>
-              <button class="button bookmark-item-button" type="button">В закладки</button>
+              <div class="catalog-item-buttons">
+                <button class="button buy-item-button" type="button">Купить</button>
+                <button class="button bookmark-item-button" type="button">В закладки</button>
+              </div>
             </li>
             <li class="catalog-list-item">
               <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <span class="last-price">30500 Р.</span>
               <span class="current-price">25500 Р.</span>
-              <button class="button buy-item-button" type="button">Купить</button>
-              <button class="button bookmark-item-button" type="button">В закладки</button>
+              <div class="catalog-item-buttons">
+                <button class="button buy-item-button" type="button">Купить</button>
+                <button class="button bookmark-item-button" type="button">В закладки</button>
+              </div>
             </li>
-            <li class="catalog-list-item">
+            <li class="catalog-list-item no-sale">
               <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <span class="current-price">12500 Р.</span>
-              <button class="button buy-item-button" type="button">Купить</button>
-              <button class="button bookmark-item-button" type="button">В закладки</button>
+              <div class="catalog-item-buttons">
+                <button class="button buy-item-button" type="button">Купить</button>
+                <button class="button bookmark-item-button" type="button">В закладки</button>
+              </div>
             </li>
             <li class="catalog-list-item">
               <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <span class="last-price">22500 Р.</span>
               <span class="current-price">15500 Р.</span>
-              <button class="button buy-item-button" type="button">Купить</button>
-              <button class="button bookmark-item-button" type="button">В закладки</button>
+              <div class="catalog-item-buttons">
+                <button class="button buy-item-button" type="button">Купить</button>
+                <button class="button bookmark-item-button" type="button">В закладки</button>
+              </div>
             </li>
             <li class="catalog-list-item">
               <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <span class="last-price">30500 Р.</span>
               <span class="current-price">25500 Р.</span>
-              <button class="button buy-item-button" type="button">Купить</button>
-              <button class="button bookmark-item-button" type="button">В закладки</button>
+              <div class="catalog-item-buttons">
+                <button class="button buy-item-button" type="button">Купить</button>
+                <button class="button bookmark-item-button" type="button">В закладки</button>
+              </div>
             </li>
-            <li class="catalog-list-item">
+            <li class="catalog-list-item no-sale">
               <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <span class="current-price">12500 Р.</span>
-              <button class="button buy-item-button" type="button">Купить</button>
-              <button class="button bookmark-item-button" type="button">В закладки</button>
+              <div class="catalog-item-buttons">
+                <button class="button buy-item-button" type="button">Купить</button>
+                <button class="button bookmark-item-button" type="button">В закладки</button>
+              </div>
             </li>
             <li class="catalog-list-item">
               <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <span class="last-price">22500 Р.</span>
               <span class="current-price">15500 Р.</span>
-              <button class="button buy-item-button" type="button">Купить</button>
-              <button class="button bookmark-item-button" type="button">В закладки</button>
+              <div class="catalog-item-buttons">
+                <button class="button buy-item-button" type="button">Купить</button>
+                <button class="button bookmark-item-button" type="button">В закладки</button>
+              </div>
             </li>
             <li class="catalog-list-item">
               <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <span class="last-price">30500 Р.</span>
               <span class="current-price">25500 Р.</span>
-              <button class="button buy-item-button" type="button">Купить</button>
-              <button class="button bookmark-item-button" type="button">В закладки</button>
+              <div class="catalog-item-buttons">
+                <button class="button buy-item-button" type="button">Купить</button>
+                <button class="button bookmark-item-button" type="button">В закладки</button>
+              </div>
             </li>
-            <li class="catalog-list-item">
+            <li class="catalog-list-item no-sale">
               <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <span class="current-price">12500 Р.</span>
-              <button class="button buy-item-button" type="button">Купить</button>
-              <button class="button bookmark-item-button" type="button">В закладки</button>
+              <div class="catalog-item-buttons">
+                <button class="button buy-item-button" type="button">Купить</button>
+                <button class="button bookmark-item-button" type="button">В закладки</button>
+              </div>
             </li>
           </ul>
           <ul class="pagination-list list-marker-switch">
