--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <button class="button bookmark-item-button" type="button">В закладки</button>
             </div>
           </li>
-          <li class="catalog-list-item new-tag" tabindex="0">
+          <li class="catalog-list-item new-tag no-sale" tabindex="0">
             <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
             <h3>Перфоратор BOSCH BFG 2000</h3>
             <span class="current-price">12500 Р.</span>
@@ -239,7 +239,7 @@
             строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
           <p class="basic-text">Мы можем доставить ваш товар в самые отдаленные точки России!
             Техномарт работает со многими транспортными компаниями:</p>
-          <ul class="transport-company-list">
+          <ul class="transport-company-list list-marker-switch">
             <li>Деловые линии</li>
             <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
@@ -256,28 +256,28 @@
       </section>
     </main>
     <footer class="main-footer">
-    <div class="main-footer-top-wrapper">
-      <div class="main-footer-top container">
-        <div>
-          <img src="img/logo-bottom.png" width="220" height="68" alt="Логотип Техномарта">
-          <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-              +7 (812) 555-05-55</p>
-        </div>
-        <nav class="main-footer-navigation">
-          <ul class="footer-navigation-top list-marker-switch">
-            <li><a href="#">Компания</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-          <ul class="footer-navigation-bottom list-marker-switch">
-            <li><a href="#">Материалы</a></li>
-            <li><a href="#">Техника</a></li>
-            <li><a href="#">Инструмент</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-          </ul>
-        </nav>
+      <div class="main-footer-top-wrapper">
+        <div class="main-footer-top container">
+          <div>
+            <img src="img/logo-bottom.png" width="220" height="68" alt="Логотип Техномарта">
+            <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+                +7 (812) 555-05-55</p>
+          </div>
+          <nav class="main-footer-navigation">
+            <ul class="footer-navigation-top list-marker-switch">
+              <li><a href="#">Компания</a></li>
+              <li><a href="#">Новости</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+            <ul class="footer-navigation-bottom list-marker-switch">
+              <li><a href="#">Материалы</a></li>
+              <li><a href="#">Техника</a></li>
+              <li><a href="#">Инструмент</a></li>
+              <li><a href="#">Спецпредложения</a></li>
+            </ul>
+          </nav>
         </div>      
       </div>
       <div class="main-footer-bottom-wrapper">
@@ -289,7 +289,7 @@
             <li class="social-link-item social-link-facebook"><a href="fb.com/technomart"></a></li>
             <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart"></a></li>
           </ul>
-          <div>
+          <div class="developer-links">
             <p class="main-footer-email">Обратная связь:
               <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </p>
